--- a/Components/DisplayRaster.razor
+++ b/Components/DisplayRaster.razor
@@ -7,7 +7,8 @@
         <div class="raster-row">
             @for (int j = 0; j < Raster.Row; j++)
             {
-                <div class="pixel">@Raster.Grid[i, j].Color</div>
+                //int pixelColor = 
+                <div class="pixel" style="background-color:rgba(0,0,0,@((double)Raster.Grid[i,j].Color / Raster.MaxColor));">@Raster.Grid[i, j].Color</div>
             }
         </div>
     }
