--- a/Components/DisplayRaster.razor.css
+++ b/Components/DisplayRaster.razor.css
@@ -1,6 +1,8 @@
 .raster {
     display: flex;
     flex-direction: column;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    width: fit-content;
 }
 
 .raster-row {
@@ -12,9 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 20px;
-    width: 20px;
-    border: 4px solid black;
-    background-color: rgb(255, 255, 255);
+    height: 2.5em;
+    width: 2.5em;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
