--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -14,6 +14,11 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="image-coloring" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> 1. Image Coloring
+            </NavLink>
+        </div>
     </nav>
 </div>
 
