--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -15,6 +15,14 @@
 <br>
 <DisplayRaster Raster="rasterVertical"/>
 
+<br>
+<DisplayRaster Raster="rasterValuesOnly"/>
+
+<br>
+<DisplayRaster Raster="rasterColorOnly"/>
+
+<br>
+<DisplayRaster Raster="rasterEmpty" />
 
 
 @code {
@@ -51,4 +59,28 @@
         {4, 12},
         {0, 344}
      });
+
+    Raster rasterValuesOnly = new Raster(new int[,] {
+        {0, 1, 0, 1, 0},
+        {0, 2, 0, 2, 0},
+        {0, 0, 0, 0, 0},
+        {1, 4, 4, 4, 1},
+        {0, 1, 1, 1, 0}
+     }, true, false);
+
+    Raster rasterColorOnly = new Raster(new int[,] {
+        {0, 1, 0, 1, 0},
+        {0, 2, 0, 2, 0},
+        {0, 0, 0, 0, 0},
+        {1, 4, 4, 4, 1},
+        {0, 1, 1, 1, 0}
+     }, false, true);
+
+    Raster rasterEmpty = new Raster(new int[,] {
+        {0, 1, 0, 1, 0},
+        {0, 2, 0, 2, 0},
+        {0, 0, 0, 0, 0},
+        {1, 4, 4, 4, 1},
+        {0, 1, 1, 1, 0}
+     }, false, false);
 }
