Image coloring working

--- a/Components/DisplayRaster.razor
+++ b/Components/DisplayRaster.razor
@@ -7,10 +7,14 @@
             <div class="raster-row">
                 @for (int j = 0; j < Raster.Row; j++)
                 {
-                    double backgroundColorAlpha = Raster.DisplayColor ? (double)Raster.Grid[i, j].Color / Raster.MaxColor : 0;
+                    double backgroundColorAlpha = Raster.DisplayColor ? (double)Raster.Grid[i, j].Color / Raster.MaxColor : (double)Raster.Grid[i, j].CurrentColor / Raster.MaxColor;
+
+                    var localI = i;
+                    var localJ = j;
+  
                     string textColorString = backgroundColorAlpha > 0.5 ? "white" : "black";
                     string colorValue = Raster.DisplayValues ? Raster.Grid[i, j].Color.ToString() : string.Empty;
-                    <div class="pixel" onclick="" style="background-color:rgba(0,0,0,@backgroundColorAlpha);color:@textColorString">@colorValue</div>
+                    <div class="pixel" @onclick="(()=>ChangePixelColor(localI, localJ))" style=" background-color:rgba(0,0,0,@backgroundColorAlpha);color:@textColorString">@colorValue</div>
                 }
             </div>
         }
@@ -21,7 +25,8 @@
         @foreach (int color in Raster.ColorPallete) {
             <div class="raster-row">
                 <div class="pixel">@color</div>
-                <div class="pixel" onclick="" style="background-color:rgba(0,0,0,@((double)color / Raster.MaxColor));"></div>
+                <div class="pixel" @onclick="(()=>SelectBrushColor(color))" style="background-color:rgba(0,0,0,@((double)color / Raster.MaxColor));">
+                </div>
             </div>
         }
     </div>
@@ -39,7 +44,9 @@
         currentBrushColor = color;
     }
 
-    private void ColorPixel()
+    private void ChangePixelColor(int i, int j)
     {
+        Raster.Grid[i, j].ChangeCurrentColor(currentBrushColor);
+        StateHasChanged();
     }
 }
