--- a/Components/DisplayRaster.razor.css
+++ b/Components/DisplayRaster.razor.css
@@ -20,6 +20,10 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+.incorrect {
+    border-color: red;
+}
+
 .raster-legend-pair {
     display: flex;
     flex-direction: row;
