--- a/Components/DisplayRaster.razor
+++ b/Components/DisplayRaster.razor
@@ -1,6 +1,30 @@
 @using Models;
+@using System.Collections.Generic;
 
 <div class="raster-legend-pair">
+    <div class="empty"></div>
+    <div class="raster col-mismatched">
+        @for (int i = 0; i < Raster.Row; i++) 
+        {
+            <div class="pixel">
+                @if (MismatchedColumns.Contains(i))
+                {
+                    <span style="color: red;">X</span>
+                }
+            </div>
+        }
+    </div>
+    <div class="raster row-mismatched">
+        @for (int i = 0; i < Raster.Col; i++)
+        {
+            <div class="pixel">
+                @if (MismatchedRows.Contains(i))
+                {
+                    <span style="color: blue;">X</span>
+                }
+            </div>
+        }
+    </div>
     <div class="raster">
         @for (int i = 0; i < Raster.Col; i++)
         {
@@ -11,10 +35,12 @@
 
                     var localI = i;
                     var localJ = j;
-  
+
                     string textColorString = backgroundColorAlpha > 0.5 ? "white" : "black";
                     string colorValue = Raster.DisplayValues ? Raster.Grid[i, j].Color.ToString() : string.Empty;
-                    <div class="pixel" @onclick="(()=>ChangePixelColor(localI, localJ))" style=" background-color:rgba(0,0,0,@backgroundColorAlpha);color:@textColorString">@colorValue</div>
+                    <div class="pixel" @onclick="(() => ChangePixelColor(localI, localJ))" style="background-color:rgba(0,0,0,@backgroundColorAlpha);color:@textColorString">
+                        @colorValue
+                    </div>
                 }
             </div>
         }
@@ -22,20 +48,21 @@
 
     <div class="raster legend">
         <div>legenda</div>
-        @foreach (int color in Raster.ColorPallete) {
+        @foreach (int color in Raster.ColorPallete)
+        {
             <div class="raster-row">
                 <div class="pixel">@color</div>
-                <div class="pixel" @onclick="(()=>SelectBrushColor(color))" style="background-color:rgba(0,0,0,@((double)color / Raster.MaxColor));">
-                </div>
+                <div class="pixel" @onclick="(() => SelectBrushColor(color))" style="background-color:rgba(0,0,0,@((double)color / Raster.MaxColor));"></div>
             </div>
         }
     </div>
-
-    <div>@currentBrushColor</div>
 </div>
+<div>@currentBrushColor</div>
 
 @code {
     [Parameter] public Raster Raster { get; set; }
+    [Parameter] public HashSet<int> MismatchedRows { get; set; } = new HashSet<int>();
+    [Parameter] public HashSet<int> MismatchedColumns { get; set; } = new HashSet<int>();
 
     private int currentBrushColor = 0;
 
