--- a/Components/DisplayRaster.razor
+++ b/Components/DisplayRaster.razor
@@ -1,5 +1,5 @@
-@using Models;
-@using System.Collections.Generic;
+@using Models
+@using System.Collections.Generic
 
 <div class="raster-legend-pair">
     <div class="raster-grid">
@@ -60,18 +60,23 @@
         {
             <div class="raster-row">
                 <div class="pixel">@color</div>
-                <div class="pixel" @onclick="(() => SelectBrushColor(color))" style="background-color:rgba(0,0,0,@((double)color / Raster.MaxColor));"></div>
+                <div class="pixel brush-select" @onclick="(() => SelectBrushColor(color))" style="background-color:rgba(0,0,0,@((double)color / Raster.MaxColor));"></div>
             </div>
         }
     </div>
 </div>
+
 <div>@currentBrushColor</div>
+
+<button class="check-color-btn" @onclick="CompareColors">Kontrola: @retCompareColors</button>
 
 @code {
     [Parameter] public Raster Raster { get; set; }
-    [Parameter] public HashSet<int> MismatchedRows { get; set; } = new HashSet<int>();
-    [Parameter] public HashSet<int> MismatchedColumns { get; set; } = new HashSet<int>();
     [Parameter] public bool ShowMismatchIndicators { get; set; } = false;
+
+    private HashSet<int> MismatchedRows { get; set; } = new HashSet<int>();
+    private HashSet<int> MismatchedColumns { get; set; } = new HashSet<int>();
+    private bool retCompareColors = false;
 
     private int currentBrushColor = 0;
 
@@ -84,5 +89,13 @@
     {
         Raster.Grid[i, j].ChangeCurrentColor(currentBrushColor);
         StateHasChanged();
+    }
+
+    private void CompareColors()
+    {
+        retCompareColors = Raster.ColorsMatchBool();
+        var (rows, cols) = Raster.ColorsMatch();
+        MismatchedRows = new HashSet<int>(rows);
+        MismatchedColumns = new HashSet<int>(cols);
     }
 }
