--- a/Pages/FromText.razor
+++ b/Pages/FromText.razor
@@ -7,7 +7,7 @@
     <div class="text-display pre-wrap">
         @rasterSmiley.ToString()
     </div>
-    <DisplayRaster Raster="rasterSmiley"/>
+    <DisplayRaster Raster="rasterSmiley" ShowMismatchIndicators="true"/>
 </div>
 <br>
 
