--- a/Pages/FromCompressed.razor
+++ b/Pages/FromCompressed.razor
@@ -4,10 +4,18 @@
 @using graphics_encoding.Components;
 
 <div class="text-raster-pair">
-    <DisplayRaster Raster="rasterSmiley"/>
+    <DisplayRaster Raster="rasterSmiley" ShowMismatchIndicators="false"/>
 </div>
 <br>
 
 @code {
-    Raster rasterSmiley = new Raster("in1.txt", 1);
+    @code {
+        Raster rasterSmiley = new Raster(
+            "1 1 1 1 1" + Environment.NewLine +
+            "1 1 1 1 1" + Environment.NewLine +
+            "5" + Environment.NewLine +
+            "0 5" + Environment.NewLine +
+            "1 3 1" + Environment.NewLine
+       , 0, false, false, true);
+    }
 }
