--- a/Pages/FromText.razor
+++ b/Pages/FromText.razor
@@ -2,6 +2,8 @@
 
 @using Models;
 @using graphics_encoding.Components;
+@using System.Collections.Generic;
+
 
 <div class="text-raster-pair">
     <div class="text-display pre-wrap">
