--- a/Pages/FromCompressed.razor
+++ b/Pages/FromCompressed.razor
@@ -9,13 +9,15 @@
 <br>
 
 @code {
-    @code {
-        Raster rasterSmiley = new Raster(
-            "1 1 1 1 1" + Environment.NewLine +
-            "1 1 1 1 1" + Environment.NewLine +
-            "5" + Environment.NewLine +
-            "0 5" + Environment.NewLine +
-            "1 3 1" + Environment.NewLine
-       , 0, false, false, true);
+    string inRasterSmiley = "1 1 1 1 1" + Environment.NewLine +
+                            "1 1 1 1 1" + Environment.NewLine +
+                            "5" + Environment.NewLine +
+                            "0 5" + Environment.NewLine +
+                            "1 3 1" + Environment.NewLine;
+    Raster rasterSmiley;
+
+    protected override void OnInitialized()
+    {
+        Raster rasterSmiley = new Raster(inRasterSmiley, 0, false, false, true);
     }
 }
