--- a/Pages/FromText.razor
+++ b/Pages/FromText.razor
@@ -1,20 +1,19 @@
 @page "/FromText"
 
-@using Models;
-@using graphics_encoding.Components;
-@using System.Collections.Generic;
-
+@using Models
+@using graphics_encoding.Components
+@using System.Collections.Generic
 
 <div class="text-raster-pair">
     <div class="text-display pre-wrap">
-        @rasterSmiley.ToString()
+        @rasterSmiley.Grid.ToString()
     </div>
-    <DisplayRaster Raster="rasterSmiley" ShowMismatchIndicators="true"/>
+    <DisplayRaster Raster="rasterSmiley" ShowMismatchIndicators="true" />
 </div>
 <br>
 
 @code {
-    Raster rasterSmiley = new Raster(new int[,] {
+    ArrayRaster rasterSmiley = new ArrayRaster(new int[,] {
         {0, 1, 0, 1, 0},
         {0, 2, 0, 2, 0},
         {0, 0, 0, 0, 0},
