--- a/Pages/ImageColoring.razor
+++ b/Pages/ImageColoring.razor
@@ -12,7 +12,7 @@
 <DisplayRaster Raster="rasterValuesOnly" ShowMismatchIndicators="true" />
 
 @code {
-    Raster rasterValuesOnly = new Raster(new int[,] {
+    ArrayRaster rasterValuesOnly = new ArrayRaster(new int[,] {
         {0, 1, 0, 1, 0},
         {0, 2, 0, 2, 0},
         {0, 0, 0, 0, 0},
