--- a/Pages/FromCompressed.razor
+++ b/Pages/FromCompressed.razor
@@ -4,7 +4,7 @@
 @using graphics_encoding.Components;
 
 <div class="text-raster-pair">
-    <DisplayRaster Raster="rasterSmiley" ShowMismatchIndicators="false"/>
+    <DisplayRaster StringRaster="rasterSmiley" ShowMismatchIndicators="false" />
 </div>
 <br>
 
@@ -18,6 +18,6 @@
 
     protected override void OnInitialized()
     {
-        Raster rasterSmiley = new Raster(inRasterSmiley, 0, false, false, true);
+        Raster rasterSmiley = new StringRaster(inRasterSmiley, 0, false, false, true);
     }
 }
