--- a/Pages/FromCompressed.razor
+++ b/Pages/FromCompressed.razor
@@ -1,23 +1,23 @@
 @page "/FromCompressed"
 
-@using Models;
-@using graphics_encoding.Components;
+@using Models
+@using graphics_encoding.Components
+@using System.Collections.Generic
 
 <div class="text-raster-pair">
-    <DisplayRaster StringRaster="rasterSmiley" ShowMismatchIndicators="false" />
+    <div class="text-display pre-wrap">
+        @rasterSmiley.Grid.ToString()
+    </div>
+    <DisplayRaster Raster="rasterSmiley" ShowMismatchIndicators="true" />
 </div>
 <br>
 
 @code {
-    string inRasterSmiley = "1 1 1 1 1" + Environment.NewLine +
-                            "1 1 1 1 1" + Environment.NewLine +
-                            "5" + Environment.NewLine +
-                            "0 5" + Environment.NewLine +
-                            "1 3 1" + Environment.NewLine;
-    Raster rasterSmiley;
-
-    protected override void OnInitialized()
-    {
-        Raster rasterSmiley = new StringRaster(inRasterSmiley, 0, false, false, true);
-    }
+    ArrayRaster rasterSmiley = new ArrayRaster(new int[,] {
+        {0, 1, 0, 1, 0},
+        {0, 2, 0, 2, 0},
+        {0, 0, 0, 0, 0},
+        {1, 4, 4, 4, 1},
+        {0, 1, 1, 1, 0}
+     }, false, false, true);
 }
