--- a/Pages/FromCompressed.razor
+++ b/Pages/FromCompressed.razor
@@ -6,18 +6,44 @@
 
 <div class="text-raster-pair">
     <div class="text-display pre-wrap">
-        @rasterSmiley.Grid.ToString()
+        @rasterSmiley.Grid.CompressedString()
     </div>
     <DisplayRaster Raster="rasterSmiley" ShowMismatchIndicators="true" />
 </div>
 <br>
 
+<div class="text-raster-pair">
+    <div class="text-display pre-wrap">
+        @rasterCat.Grid.CompressedString()
+    </div>
+    <DisplayRaster Raster="rasterCat" ShowMismatchIndicators="true" />
+</div>
+
 @code {
     ArrayRaster rasterSmiley = new ArrayRaster(new int[,] {
         {0, 1, 0, 1, 0},
-        {0, 2, 0, 2, 0},
+        {0, 1, 0, 1, 0},
         {0, 0, 0, 0, 0},
-        {1, 4, 4, 4, 1},
+        {1, 1, 1, 1, 1},
         {0, 1, 1, 1, 0}
-     }, false, false, true);
+     }, 0, false, false, true);
+
+    ArrayRaster rasterCat = new ArrayRaster(new int[,] {
+    {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0},
+    {0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0},
+    {0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0},
+    {0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0},
+    {0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0},
+    {0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0},
+    {0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0},
+    {0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0},
+    {0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0},
+    {0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0},
+    {0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0},
+    {0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0},
+    {0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0},
+    {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0},
+    {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0},
+    {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0}
+    }, 0, false, false, true);
 }
