--- a/Components/DisplayRaster.razor
+++ b/Components/DisplayRaster.razor
@@ -58,7 +58,7 @@
 
         <div class="legend">
             <div>legenda</div>
-            @foreach (int color in Raster.Grid.ColorPallete)
+            @foreach (int color in Raster.Grid.ColorPalette)
             {
                 <div class="raster-row">
                     <div class="pixel">@color</div>
