--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -7,28 +7,19 @@
 
 <h1>Graphics Encoding</h1>
 
-<DisplayRaster ArrayRaster="rasterSmiley" />
-<br>
-<DisplayRaster ArrayRaster="rasterSmileyBW" />
-<br>
-<DisplayRaster ArrayRaster="rasterMultipleDigits" />
-<br>
-<DisplayRaster ArrayRaster="rasterGreyscaleTest" />
-<br>
-<DisplayRaster ArrayRaster="rasterVertical" />
-
-<br>
-<DisplayRaster ArrayRaster="rasterValuesOnly" />
-
-<br>
-<DisplayRaster ArrayRaster="rasterColorOnly" />
-
-<br>
-<DisplayRaster ArrayRaster="rasterEmpty" />
+<DisplayRaster Raster="rasterSmiley" />
+<DisplayRaster Raster="rasterSmileyBW" />
+<DisplayRaster Raster="rasterMultipleDigits" />
+<DisplayRaster Raster="rasterGreyscaleTest" />
+<DisplayRaster Raster="rasterVertical" />
+<DisplayRaster Raster="rasterValuesOnly" />
+<DisplayRaster Raster="rasterColorOnly" />
+<DisplayRaster Raster="rasterEmpty" />
+<DisplayRaster Raster="rasterCat" />
 
 
 @code {
-    Raster rasterSmiley = new ArrayRaster(new int[,] {
+    ArrayRaster rasterSmiley = new ArrayRaster(new int[,] {
         {0, 1, 0, 1, 0},
         {0, 2, 0, 2, 0},
         {0, 0, 0, 0, 0},
@@ -36,7 +27,7 @@
         {0, 1, 1, 1, 0}
      });
 
-    Raster rasterSmileyBW = new ArrayRaster(new int[,] {
+    ArrayRaster rasterSmileyBW = new ArrayRaster(new int[,] {
         {0, 1, 0, 1, 0},
         {0, 1, 0, 1, 0},
         {0, 0, 0, 0, 0},
@@ -44,33 +35,33 @@
         {0, 1, 1, 1, 0}
      });
 
-    Raster rasterAssymetric = new ArrayRaster(new int[,] {
+    ArrayRaster rasterAssymetric = new ArrayRaster(new int[,] {
         {1, 1, 1, 1, 0},
         {0, 0, 0, 0, 1},
         {0, 1, 1, 1, 0}
      });
 
-    Raster rasterMultipleDigits = new ArrayRaster(new int[,] {
+    ArrayRaster rasterMultipleDigits = new ArrayRaster(new int[,] {
         {1, 60, 1, 0},
         {0, 0, 255, 0},
         {0, 344, 1, 1}
      });
 
-    Raster rasterGreyscaleTest = new ArrayRaster(new int[,] {
+    ArrayRaster rasterGreyscaleTest = new ArrayRaster(new int[,] {
         {0, 16, 16*2, 16*3},
         {16*4, 16*5, 16*6, 16*7},
         {16*8, 16*9, 16*10, 16*11},
         {16*12, 16*13, 16*14, 16*15}
      });
 
-    Raster rasterVertical = new ArrayRaster(new int[,] {
+    ArrayRaster rasterVertical = new ArrayRaster(new int[,] {
         {1, 60},
         {0, 0},
         {4, 12},
         {0, 344}
      });
 
-    Raster rasterValuesOnly = new ArrayRaster(new int[,] {
+    ArrayRaster rasterValuesOnly = new ArrayRaster(new int[,] {
         {0, 1, 0, 1, 0},
         {0, 2, 0, 2, 0},
         {0, 0, 0, 0, 0},
@@ -78,7 +69,7 @@
         {0, 1, 1, 1, 0}
      }, true, false);
 
-    Raster rasterColorOnly = new ArrayRaster(new int[,] {
+    ArrayRaster rasterColorOnly = new ArrayRaster(new int[,] {
         {0, 1, 0, 1, 0},
         {0, 2, 0, 2, 0},
         {0, 0, 0, 0, 0},
@@ -86,11 +77,30 @@
         {0, 1, 1, 1, 0}
      }, false, true);
 
-    Raster rasterEmpty = new ArrayRaster(new int[,] {
+    ArrayRaster rasterEmpty = new ArrayRaster(new int[,] {
         {0, 1, 0, 1, 0},
         {0, 2, 0, 2, 0},
         {0, 0, 0, 0, 0},
         {1, 4, 4, 4, 1},
         {0, 1, 1, 1, 0}
      }, false, false);
+
+    ArrayRaster rasterCat = new ArrayRaster(new int[,] {
+        {0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0},
+        {0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0},
+        {0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0},
+        {0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0},
+        {0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0},
+        {0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0},
+        {0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0},
+        {0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0},
+        {0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0},
+        {0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0},
+        {0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0},
+        {0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0},
+        {0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0},
+        {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0},
+        {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0},
+        {0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0}
+    }, true, true, false);
 }
